--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-redux": "^7.1.24",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "i18next": "^22.5.0",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^2.1.3",
+    "react-scroll": "^1.9.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
@@ -52,5 +54,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/aos": "^3.0.7",
+    "@types/react-scroll": "^1.8.10"
   }
 }
